--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -2,11 +2,11 @@ name: Build Base image
 
 on:
   schedule:
-    - cron: '0 0 * * 0'  # Каждую неделю
+    - cron: "0 0 * * 0" # Каждую неделю
   push:
-    branches: [ "main" ]
+    branches: ["master"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["master"]
   workflow_dispatch:
 
 jobs:
